--- a/ansigtsbehandlinger.html
+++ b/ansigtsbehandlinger.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="da">
 <head>
 <meta charset="UTF-8">
  <meta name="robots" content="noindex nofollow" />
@@ -7,7 +7,8 @@
 <title>Ansigtsbehandlinger</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+<link href="navstyles.css" rel="stylesheet" type="text/css">
+	</head>
 <body>
 <header>
   <section class="logo">
@@ -28,46 +29,56 @@
   </section>
 </header>
 	
-		<nav>
+			<nav class="nav" id="navigation">
+    
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">Menu  &#9776;</a>	
+		
+		
 	
-  <div class="styling-drop">
-    <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="styleDropdown"> 
-		<a href="bryllup.html">Bryllupsstyling</a> 
+  <div class="dropdown">
+    <button class="dropbtn">Styling 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a      href="bryllup.html">Bryllupsstyling</a> 
 		<a href="styling-har.html">Styling af hår og makeup</a> 
-	 </div>
+    </div>
   </div>
-	
-  <div class="behandling-drop">
-    <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="behandlingDropdown">
-		<a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+  
+  <div class="dropdown">
+    <button class="dropbtn">Behandlinger 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
 		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
 		<a href="manicure.html">Manicure & pedicure</a>
 		<a href="bryn.html">Bryn & vipper</a>
 		<a href="voks.html">Voks</a>
 		<a href="permanent.html">Permanent makeup</a>
 		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
-	</div>
-  </div>
-	
-  	<a href="kurser.html">Kurser</a> 
-	<a href="om.html">Om</a> 
-	<a href="shop.html">Shop</a> 
-	<a href="kontakt.html">Kontakt</a> 
+    </div>
+  </div> 
+  
+ <a href="kurser.html">Kurser</a>
+  <a href="om.html">Om</a>
+  <a href="shop.html">Shop</a>
+  <a href="kontakt.html">Kontakt</a>
+  
+  
+</nav> 
 
-	</nav>
 
 
 	
 
   <div class="wrapper">
-    <section class=hero>
+    <section class="hero">
 		<img class="heroimg" src="billeder/ansigtsbehandlinger.png" alt="billede af skønhedsprodukter">
 		<article class="overlay"></article>
-		<aricle class="herotxt" >
+		<article class="herotxt" >
 			<h1> Ansigtsbehandlinger</h1>
-		</aricle>
+		</article>
 	</section>
 	
 	
@@ -414,7 +425,9 @@ Ydes kun ifbm. med Ansigtsbehandlinger.
 	</div>
 <footer>
   <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+<a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+<a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
