--- a/bryllup.html
+++ b/bryllup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="da">
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="noindex nofollow" />
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-</head>
+<link href="navstyles.css" rel="stylesheet" type="text/css">
+	</head>
 
 <body>
 <header>
@@ -31,18 +32,47 @@
   </section>
 </header>
   
-</header>
 	
-<nav>
-  <div class="styling-drop">
-    <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="styleDropdown"> <a href="bryllup.html">Bryllupsstyling</a> <a href="styling-har.html">Styling af hår og makeup</a> </div>
+	<nav class="nav" id="navigation">
+    
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">Menu  &#9776;</a>	
+		
+		
+	
+  <div class="dropdown">
+    <button class="dropbtn">Styling 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a      href="bryllup.html">Bryllupsstyling</a> 
+		<a href="styling-har.html">Styling af hår og makeup</a> 
+    </div>
   </div>
-  <div class="behandling-drop">
-    <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="behandlingDropdown"> <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> <a href="hudpleje.html">Skræddersyet hudpleje</a> <a href="manicure.html">Manicure & pedicure</a> <a href="bryn.html">Bryn & vipper</a> <a href="voks.html">Voks</a> <a href="permanent.html">Permanent makeup</a> <a href="kropsbehandlinger.html">Kropsbehandlinger</a> </div>
-  </div>
-  <a href="kurser.html">Kurser</a> <a href="om.html">Om</a> <a href="shop.html">Shop</a> <a href="kontakt.html">Kontakt</a> </nav>
+  
+  <div class="dropdown">
+    <button class="dropbtn">Behandlinger 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
+		<a href="manicure.html">Manicure & pedicure</a>
+		<a href="bryn.html">Bryn & vipper</a>
+		<a href="voks.html">Voks</a>
+		<a href="permanent.html">Permanent makeup</a>
+		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
+    </div>
+  </div> 
+  
+  <a href="kurser.html">Kurser</a>
+  <a href="om.html">Om</a>
+  <a href="shop.html">Shop</a>
+  <a href="kontakt.html">Kontakt</a>
+  
+  
+  
+</nav> 
+
 
 
 	
@@ -51,12 +81,17 @@
 	
 <main>
   <div class="wrapper">
-    <section class=hero> <img class="heroimg" src="billeder/brud.png" alt="Bryllupsbillede">
+    <section class="hero"> <img class="heroimg" src="billeder/brud.png" alt="Bryllupsbillede">
       <article class="overlay"></article>
-      <aricle class="herotxt" >
+      <article class="herotxt" >
         <h1> Hår og makeup til bruden</h1>
-      </aricle>
-		
+      </article>
+	
+    </section>
+	  
+	     <section class="info">
+      <h2>For at booke tid, ring til stylisten på </h2>
+      <h2 class="tlf">41363636</h2>
     </section>
     <section class="pakke1">
       <article class="pakkebeskrivelser">
@@ -72,8 +107,9 @@
 	</article>
 	<article class="pakkepris">
       <h3 class="pris">2699,-</h3>
+		</article>
     </section>
-	</article>
+	
     <section class="pakke2">
 		<article class="pakkebeskrivelser">
       <h3>Rød løber</h3>
@@ -106,13 +142,7 @@
       <h3 class="pris">4499,-</h3>
 		</article>
     </section>
-    <section class="info">
-      <h2>For at booke tid, ring til stylisten på </h2>
-      <h2 class="tlf">41363636</h2>
-    </section>
-	  
-	  
-	  
+
 	  
 	  
     <section class="priser">
@@ -161,40 +191,43 @@
 <div class="slideshow-container">
 
 <div class="billede fade">
-  <img src="billeder/slideshow/brud1.png" style="width:100%">
+  <img src="billeder/slideshow/brud1.png" style="width:100%" alt="brudeslideshow">
   
 </div>
 
 <div class="billede fade">
-  <img src="billeder/slideshow/brud2.png" style="width:100%">
+  <img src="billeder/slideshow/brud2.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud3.png" style="width:100%">
+  <img src="billeder/slideshow/brud3.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud4.png" style="width:100%">
+  <img src="billeder/slideshow/brud4.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud5.png" style="width:100%">
+  <img src="billeder/slideshow/brud5.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud6.png" style="width:100%">
+  <img src="billeder/slideshow/brud6.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud7.png" style="width:100%">
+  <img src="billeder/slideshow/brud7.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud8.png" style="width:100%">
+  <img src="billeder/slideshow/brud8.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud9.png" style="width:100%">
+  <img src="billeder/slideshow/brud9.png" style="width:100%" alt="brudeslideshow">
   
 </div><div class="billede fade">
-  <img src="billeder/slideshow/brud10.png" style="width:100%">
-  
+  <img src="billeder/slideshow/brud10.png" style="width:100%" alt="brudeslideshow">
 </div>
-	<a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> 
-	  </div>
+	
+	
+	<a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a>
+	<a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> 
+	  
+</div>
 <br>
 
 <div class="prikker">
@@ -221,7 +254,9 @@
 </main>
 <footer>
   <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+<a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+<a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
