--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="da">
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="noindex nofollow" />
@@ -9,14 +9,19 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+<link href="navstyles.css" rel="stylesheet" type="text/css">
 </head>
 	
 	
 <body>
+	
+	
+	
+	
 <header>
   <section class="logo">
 	  <a href="index.html">
-		  <img class="logoimg" alt="logo" src="billeder/logo.jpg"> </a>
+		  <img  alt="logo" src="billeder/logo.jpg"> </a>
 	</section>
  
   <section class="head-icons">
@@ -31,35 +36,50 @@
    <input type="text" value="Søg" > 
   </section>
 </header>
-	<nav>
+
 	
-  <div class="styling-drop">
-    <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="styleDropdown"> 
-		<a href="bryllup.html">Bryllupsstyling</a> 
+	
+	
+	
+	<nav class="nav" id="navigation">
+    
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">Menu  &#9776;</a>	
+		
+		
+	
+  <div class="dropdown">
+    <button class="dropbtn">Styling 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a      href="bryllup.html">Bryllupsstyling</a> 
 		<a href="styling-har.html">Styling af hår og makeup</a> 
-	 </div>
+    </div>
   </div>
-	
-  <div class="behandling-drop">
-    <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="behandlingDropdown">
-		<a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+  
+  <div class="dropdown">
+    <button class="dropbtn">Behandlinger 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
 		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
 		<a href="manicure.html">Manicure & pedicure</a>
 		<a href="bryn.html">Bryn & vipper</a>
 		<a href="voks.html">Voks</a>
 		<a href="permanent.html">Permanent makeup</a>
 		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
-	</div>
-  </div>
-	
-  	<a href="kurser.html">Kurser</a> 
-	<a href="om.html">Om</a> 
-	<a href="shop.html">Shop</a> 
-	<a href="kontakt.html">Kontakt</a> 
-
-	</nav>
+    </div>
+  </div> 
+  
+<a href="kurser.html">Kurser</a>
+  <a href="om.html">Om</a>
+  <a href="shop.html">Shop</a>
+  <a href="kontakt.html">Kontakt</a>
+  
+  
+  
+</nav> 
 
 
 	
@@ -69,14 +89,14 @@
 	  
 	  
     <section class=hero>
-		<img class="heroimg" src="billeder/forside.png" alt="makeup">
-		<article class="overlay"></article>
-		<aricle class="herotxt" >
-			<h1>Makeupkursus specielt til dig</h1>
-			
-		
-		<a class=kurserknap href="kurser.html"> Se mere</a>
-	</section></aricle>
+			<img class="heroimg" src="billeder/forside.png" alt="makeup">
+			<article class="overlay"></article>
+			<section class="herotxt" >
+				<h1>Makeupkursus specielt til dig</h1>
+				<a class=kurserknap href="kurser.html"> Se mere</a>
+			</section>
+	</section>
+	  
 	  
 	  
     <section class="covidbox">
@@ -145,14 +165,19 @@ Kan varmt anbefales!
 </p>
       </article>
 		
+		
 		  <p class="mereinfo">Er du interesseret i at læse flere anmeldelser, eller vil du måske selv skrive om din oplevelse hos MyStylist.
 Så gå ind på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side, eller slå os op på <a class="link" href="https://dk.trustpilot.com/review/www.mystylist.dk">trustpilot.</a> </p>
     </section>
+
+
   </div>
 </main>
 <footer>
   <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+<a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+<a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
