--- a/styling-har.html
+++ b/styling-har.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="da">
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="noindex nofollow" />
@@ -9,7 +9,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
-</head>
+<link href="navstyles.css" rel="stylesheet" type="text/css">
+	</head>
 
 <body>
 <header>
@@ -21,26 +22,61 @@
     <input type="text" value="Søg" >
   </section>
 </header>
-<nav>
-  <div class="styling-drop">
-    <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="styleDropdown"> <a href="bryllup.html">Bryllupsstyling</a> <a href="styling-har.html">Styling af hår og makeup</a> </div>
+	<nav class="nav" id="navigation">
+    
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">Menu  &#9776;</a>	
+		
+		
+	
+  <div class="dropdown">
+    <button class="dropbtn">Styling 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a      href="bryllup.html">Bryllupsstyling</a> 
+		<a href="styling-har.html">Styling af hår og makeup</a> 
+    </div>
   </div>
-  <div class="behandling-drop">
-    <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="behandlingDropdown"> <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> <a href="hudpleje.html">Skræddersyet hudpleje</a> <a href="manicure.html">Manicure & pedicure</a> <a href="bryn.html">Bryn & vipper</a> <a href="voks.html">Voks</a> <a href="permanent.html">Permanent makeup</a> <a href="kropsbehandlinger.html">Kropsbehandlinger</a> </div>
-  </div>
-  <a href="kurser.html">Kurser</a> <a href="om.html">Om</a> <a href="shop.html">Shop</a> <a href="kontakt.html">Kontakt</a> </nav>
+  
+  <div class="dropdown">
+    <button class="dropbtn">Behandlinger 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
+		<a href="manicure.html">Manicure & pedicure</a>
+		<a href="bryn.html">Bryn & vipper</a>
+		<a href="voks.html">Voks</a>
+		<a href="permanent.html">Permanent makeup</a>
+		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
+    </div>
+  </div> 
+  
+ <a href="kurser.html">Kurser</a>
+  <a href="om.html">Om</a>
+  <a href="shop.html">Shop</a>
+  <a href="kontakt.html">Kontakt</a>
+  
+  
+  
+</nav> 
+
 <main>
 <div class="wrapper">
-<section class=hero> <img class="heroimg" src="billeder/harogmakeup.png" alt="hår billede">
+<section class="hero"> 
+<img class="heroimg" src="billeder/harogmakeup.png" alt="hår billede">
   <article class="overlay"></article>
-  <aricle class="herotxt" >
+  <section class="herotxt" >
     <h1> Hår og makeup</h1>
-  </aricle>
+  </section>
 </section>
 	
-	
+		
+ <section class="info">
+      <h2>For at booke tid, ring til stylisten på </h2>
+      <h2 class="tlf">41363636</h2>
+    </section>
 	
 <section class="pakke1">
   <article class="pakkebeskrivelser">
@@ -53,7 +89,6 @@
   <p class="prisinfo">Styling hos dig</p>
   <h3>1499,-</h3>
 	</article>
-</article>
 </section>
 <section class="pakke2">
 <article class="pakkebeskrivelser">
@@ -136,13 +171,10 @@
   <p>Styling hos dig</p>
   <h3>2445,-</h3>
 </article>
+	</article>
 </section>
 	
-	
- <section class="info">
-      <h2>For at booke tid, ring til stylisten på </h2>
-      <h2 class="tlf">41363636</h2>
-    </section>
+
 <section class="priser">
   <h3 id="konfoverskrift"> Prøvesessioner for konfirmanden</h3>
   <section class="konfsek1">
@@ -160,7 +192,7 @@
   </section>
   <section class="konfsek2">
     <h4 id="konfnavn3">Hår og makeup</h4>
-    <p id="konfbeskrivelse2">En mindeværdig dag fortjener en mindeværdig styling af både hår og 
+    <p id="konfbeskrivelse3">En mindeværdig dag fortjener en mindeværdig styling af både hår og 
       Makeup, book en prøvesession, så du ikke skal spekulere på hvordan 
       Det bliver på dagen.</p>
     <h4 id="konfpris3">950,-</h4>
@@ -173,48 +205,48 @@
  <div class="slideshow-container">
 	 
 	 		<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup1.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup1.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup2.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup2.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup3.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup3.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup4.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup4.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup5.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup5.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup6.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup6.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup7.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup7.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup9.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup9.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup10.png" style="width:100%">  
+			  <img src="billeder/slideshow/hårogmakeup10.png" style="width:100%" alt="slideshow hårstyling">  
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup11.png" style="width:100%">  		  
+			  <img src="billeder/slideshow/hårogmakeup11.png" style="width:100%" alt="slideshow hårstyling">  		  
 			</div>	
 	 
 	 		<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup12.png" style="width:100%">
+			  <img src="billeder/slideshow/hårogmakeup12.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 		  
@@ -240,11 +272,13 @@
 	</div>
 
 	
-</div>
+
 </main>
 <footer>
   <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
+<a href="https://www.facebook.com/myStylist.stylist"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+<a href="https://www.instagram.com/mystylist/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>	
 </footer>
-<script type="text/javascript" src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
