prikker på forside

--- a/index.html
+++ b/index.html
@@ -100,24 +100,31 @@
 	  
 	  
     <section class="covidbox">
-      <h2>Covid-19 information</h2>
-       <h4>Klinikken er åben igen</h4>
+      <ul> 
+		<h2>Covid-19 information</h2>
+       <li><h4>Klinikken er åben igen</h4></li>
 		<p>
 		D. 20 April fik vi lov, at åbne op for behandlinger igen.
 		Vi glæder os derfor til at møde dig eller til et gensyn. 
 		</p> 
 		
-		<h4> Dette skal du læse inden din behandling</h4><p>
+		<li><h4> Dette skal du læse inden din behandling</h4></li>
+			<p>
 		Da klinikkens entre både er beregnet som venteværelse, for dem der skal ind til behandling, men også til produktsalg. Håber vi at du tilpasser din tid, sådan at du højst er der 
 		15 minutter før din behandling starter.
 		</p> 
 		
-		<h4> Vi har taget vores forbehold</h4><p>
+		<li><h4> Vi har taget vores forbehold</h4></li>
+		 <p>
 		Vores behandlings briks er beklædt med blid plast, som skiftes mellem hver kunde. Dun behandler er iført maske og handsker, som på billedet eller til at finde bag Visir eller glas.</p>
+		</ul>
       <article class="covidbillede"> 
 		<img class="covidbillede" src="billeder/forsidecovid.png" alt="makeup">
 		</article>
+		
     </section >
+	
+	  
     <section class="volkommenbox">
       <h2>Velkommen til en verden af skønhed</h2>
       <p>MyStylist er en lille oase fyldt med god stemning og skønhed. Vi tilbyder en bred vifte af behandlinger, så der er til enhver smag.
